--- a/.classpath
+++ b/.classpath
@@ -1,20 +1,49 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry output="target" path="src/main/scala" kind="src"></classpathentry>
-  <classpathentry output="target" path="src/main/java" kind="src"></classpathentry>
-  <classpathentry output="target" path="src/main/resources" kind="src"></classpathentry>
-  <classpathentry output="target" path="src/test/scala" kind="src"></classpathentry>
-  <classpathentry output="target" path="src/test/java" kind="src"></classpathentry>
-  <classpathentry output="target" path="src/test/resources" kind="src"></classpathentry>
-  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.6.6.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.0.7.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.0.7.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.3.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/org.scala-lang/scala-reflect/jars/scala-reflect-2.11.0.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/org.easytesting/fest-assert/jars/fest-assert-1.4.jar" kind="var"></classpathentry>
-  <classpathentry path="IVY_HOME/cache/org.easytesting/fest-util/jars/fest-util-1.1.6.jar" kind="var"></classpathentry>
-  <classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"></classpathentry>
-  <classpathentry path="bin" kind="output"></classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/main/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/classes" path="src/main/scala">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="target/test-classes" path="src/test/scala">
+		<attributes>
+			<attribute name="optional" value="true"/>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
