Upgraded to Scala 2.11.6

--- a/.settings/org.scala-ide.sdt.core.prefs
+++ b/.settings/org.scala-ide.sdt.core.prefs
@@ -1,3 +1,4 @@
+P=
 Xcheck-null=false
 Xcheckinit=false
 Xdisable-assertions=false
@@ -8,23 +9,30 @@ Xfuture=false
 Xlog-implicits=false
 Xmigration=false
 Xno-uescape=false
+Xplugin=
+Xplugin-disable=
+Xplugin-require=
 Xpluginsdir=/opt/eclipse-dist/eclipse_4_jee/configuration/org.eclipse.osgi/bundles/818/1/.cp/lib
 Ybuild-manager-debug=false
 Yno-generic-signatures=false
 Yno-imports=false
 Ypresentation-debug=false
 Ypresentation-delay=0
+Ypresentation-log=
+Ypresentation-replay=
 Ypresentation-verbose=false
 Yrecursion=0
 Yself-in-annots=false
 Ystruct-dispatch=poly-cache
 Ywarn-dead-code=false
+apiDiff=false
 buildmanager=sbt
 compileorder=Mixed
 debugIncremental=false
 deprecation=false
 eclipse.preferences.version=1
 explaintypes=false
+feature=false
 formatter.alignParameters=false
 formatter.alignSingleLineCaseStatements=false
 formatter.alignSingleLineCaseStatements.maxArrowIndent=40
@@ -46,9 +54,15 @@ formatter.spaceInsideBrackets=false
 formatter.spaceInsideParentheses=false
 formatter.spacesWithinPatternBinders=true
 g=source
+nameHashing=false
 no-specialization=false
 nowarn=false
 optimise=false
+recompileOnMacroDef=true
+relationsDebug=false
+scala.compiler.additionalParams=-g\:vars
+scala.compiler.installation=2.11
+scala.compiler.sourceLevel=2.11
 scala.compiler.useProjectSettings=true
 stopBuildOnError=true
 syntaxColouring.bracket.backgroundColourEnabled=false
@@ -135,6 +149,7 @@ syntaxColouring.xml.tagName.colour=63,127,127
 syntaxColouring.xml.tagName.enabled=true
 syntaxColouring.xml.tagName.italic=false
 syntaxColouring.xml.tagName.underline=false
-target=jvm-1.5
+target=jvm-1.7
 unchecked=false
 verbose=false
+withVersionClasspathValidator=true
