--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,16 @@
   <classpathentry output="target" kind="src" path="src/test/java"/>
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.6.6.jar"/>
+  <classpathentry kind="lib" path="/home/nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/aopalliance/aopalliance/1.0/jars/aopalliance.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-beans/jars/spring-beans-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-core/jars/spring-core-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/commons-logging/commons-logging/1.1.3/jars/commons-logging.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.0.7.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.0.7.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar"/>
@@ -18,7 +28,6 @@
   <classpathentry kind="var" path="IVY_HOME/cache/org.parboiled/parboiled-core/bundles/parboiled-core-1.1.6.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-routing_2.11/bundles/spray-routing_2.11-1.3.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-httpx_2.11/bundles/spray-httpx_2.11-1.3.2.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.jvnet.mimepull/mimepull/jars/mimepull-1.9.4.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.chuusai/shapeless_2.11/jars/shapeless_2.11-1.2.4.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-json_2.11/bundles/spray-json_2.11-1.3.1.jar"/>
