--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,8 @@
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.6.6.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
+  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/org.slf4j/slf4j-api/1.7.7/jars/slf4j-api.jar"/>
   <classpathentry kind="lib" path="/home/nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.13.RELEASE.jar"/>
@@ -34,7 +36,6 @@
   <classpathentry kind="var" path="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/bundles/cassandra-driver-core-2.1.4.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.google.guava/guava/bundles/guava-14.0.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.codahale.metrics/metrics-core/bundles/metrics-core-3.0.2.jar"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/org.slf4j/slf4j-api/1.7.5/jars/slf4j-api.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.easytesting/fest-assert/jars/fest-assert-1.4.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.easytesting/fest-util/jars/fest-util-1.1.6.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-testkit_2.11/jars/spray-testkit_2.11-1.3.2.jar"/>
