--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,11 @@
   <classpathentry output="target" kind="src" path="src/test/java"/>
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.6.6.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
   <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/org.slf4j/slf4j-api/1.7.7/jars/slf4j-api.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar"/>
   <classpathentry kind="lib" path="/home/nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.13.RELEASE.jar"/>
@@ -18,8 +20,8 @@
   <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/commons-logging/commons-logging/1.1.3/jars/commons-logging.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.0.7.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.0.7.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/bundles/scalaz-core_2.11-7.1.1.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-parser-combinators_2.11/bundles/scala-parser-combinators_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-can_2.11/bundles/spray-can_2.11-1.3.2.jar"/>
@@ -36,14 +38,13 @@
   <classpathentry kind="var" path="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/bundles/cassandra-driver-core-2.1.4.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.google.guava/guava/bundles/guava-14.0.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.codahale.metrics/metrics-core/bundles/metrics-core-3.0.2.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/net.jpountz.lz4/lz4/jars/lz4-1.3.0.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.xerial.snappy/snappy-java/bundles/snappy-java-1.1.1.6.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.easytesting/fest-assert/jars/fest-assert-1.4.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.easytesting/fest-util/jars/fest-util-1.1.6.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-testkit_2.11/jars/spray-testkit_2.11-1.3.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.8.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/specs2_2.11/jars/specs2_2.11-2.3.13.jar"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-parser-combinators_2.11/bundles/scala-parser-combinators_2.11-1.0.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/junit/junit/jars/junit-4.11.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.pegdown/pegdown/jars/pegdown-1.2.1.jar"/>
@@ -57,13 +58,8 @@
   <classpathentry kind="var" path="IVY_HOME/cache/org.mockito/mockito-core/jars/mockito-core-1.9.5.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.objenesis/objenesis/jars/objenesis-1.0.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/classycle/jars/classycle-1.4.3.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/bundles/scalaz-core_2.11-7.0.6.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-concurrent_2.11/bundles/scalaz-concurrent_2.11-7.0.6.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-effect_2.11/bundles/scalaz-effect_2.11-7.0.6.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/specs2-core_2.11/jars/specs2-core_2.11-2.3.11.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/specs2-matcher_2.11/jars/specs2-matcher_2.11-2.3.11.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/specs2-common_2.11/jars/specs2-common_2.11-2.3.11.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
