--- a/.classpath
+++ b/.classpath
@@ -1,23 +1,25 @@
 <classpath>
+  <classpathentry output="target" kind="src" path="src/main/scala-2.11"/>
   <classpathentry output="target" kind="src" path="src/main/scala"/>
   <classpathentry output="target" kind="src" path="src/main/java"/>
   <classpathentry output="target" kind="src" path="src/main/resources"/>
+  <classpathentry output="target" kind="src" path="src/test/scala-2.11"/>
   <classpathentry output="target" kind="src" path="src/test/scala"/>
   <classpathentry output="target" kind="src" path="src/test/java"/>
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/org.slf4j/slf4j-api/1.7.7/jars/slf4j-api.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.7.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar"/>
-  <classpathentry kind="lib" path="/home/nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
+  <classpathentry kind="lib" path="/Users/Nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/aopalliance/aopalliance/1.0/jars/aopalliance.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/aopalliance/aopalliance/jars/aopalliance-1.0.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-beans/jars/spring-beans-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-core/jars/spring-core-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/commons-logging/commons-logging/1.1.3/jars/commons-logging.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/commons-logging/commons-logging/jars/commons-logging-1.1.3.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.13.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/bundles/scalaz-core_2.11-7.1.1.jar"/>
@@ -26,9 +28,9 @@
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe/config/bundles/config-1.2.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-cluster_2.11/jars/akka-cluster_2.11-2.3.8.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-remote_2.11/jars/akka-remote_2.11-2.3.8.jar"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/io.netty/netty/3.8.0.Final/bundles/netty.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.8.0.Final.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.google.protobuf/protobuf-java/bundles/protobuf-java-2.5.0.jar"/>
-  <classpathentry kind="lib" path="/home/nico/Projects/3rdParty/activator-1.3.2/repository/org.uncommons.maths/uncommons-maths/1.2.2a/jars/uncommons-maths.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.uncommons.maths/uncommons-maths/jars/uncommons-maths-1.2.2a.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-can_2.11/bundles/spray-can_2.11-1.3.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-io_2.11/bundles/spray-io_2.11-1.3.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-util_2.11/bundles/spray-util_2.11-1.3.2.jar"/>
