--- a/.classpath
+++ b/.classpath
@@ -13,15 +13,15 @@
   <classpathentry kind="var" path="IVY_HOME/cache/org.clapper/grizzled-slf4j_2.11/jars/grizzled-slf4j_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar"/>
-  <classpathentry kind="lib" path="/Users/Nico/.m2/repository/org/springframework/scala/spring-scala_2.11/1.0.0.RC3/spring-scala_2.11-1.0.0.RC3.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/aopalliance/aopalliance/jars/aopalliance-1.0.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-beans/jars/spring-beans-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-core/jars/spring-core-3.2.13.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.github.norru/spring-scala/jars/spring-scala-1.0.0.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-core/jars/spring-core-3.2.14.RELEASE.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/commons-logging/commons-logging/jars/commons-logging-1.1.3.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.13.RELEASE.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.2.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-beans/jars/spring-beans-3.2.14.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-context/jars/spring-context-3.2.14.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-aop/jars/spring-aop-3.2.14.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/aopalliance/aopalliance/jars/aopalliance-1.0.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.14.RELEASE.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.5.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scalaz/scalaz-core_2.11/bundles/scalaz-core_2.11-7.1.1.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-parser-combinators_2.11/bundles/scala-parser-combinators_2.11-1.0.2.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-actor_2.11/jars/akka-actor_2.11-2.3.8.jar"/>
