Fixed a bunch of inter-module dependencies

--- a/rnkr-engine/.classpath
+++ b/rnkr-engine/.classpath
@@ -4,6 +4,7 @@
   <classpathentry output="target" kind="src" path="src/test/scala"/>
   <classpathentry output="target" kind="src" path="src/test/resources"/>
   <classpathentry kind="src" path="/rnkr-core" exported="true" combineaccessrules="false"/>
+  <classpathentry kind="src" path="/rnkr-support" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.7.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.slf4j/jcl-over-slf4j/jars/jcl-over-slf4j-1.7.7.jar"/>
