--- a/rnkr-app/.classpath
+++ b/rnkr-app/.classpath
@@ -48,7 +48,7 @@
   <classpathentry kind="var" path="IVY_HOME/cache/aopalliance/aopalliance/jars/aopalliance-1.0.jar" sourcepath="IVY_HOME/cache/aopalliance/aopalliance/srcs/aopalliance-1.0-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.springframework/spring-expression/jars/spring-expression-3.2.14.RELEASE.jar" sourcepath="IVY_HOME/cache/org.springframework/spring-expression/srcs/spring-expression-3.2.14.RELEASE-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/bundles/scala-xml_2.11-1.0.5.jar" sourcepath="IVY_HOME/cache/org.scala-lang.modules/scala-xml_2.11/srcs/scala-xml_2.11-1.0.5-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.1.3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
