--- a/rnkr-engine/.classpath
+++ b/rnkr-engine/.classpath
@@ -22,7 +22,7 @@
   <classpathentry kind="var" path="IVY_HOME/cache/org.xerial.snappy/snappy-java/bundles/snappy-java-1.1.1.6.jar" sourcepath="IVY_HOME/cache/org.xerial.snappy/snappy-java/srcs/snappy-java-1.1.1.6-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-classic/srcs/logback-classic-1.1.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-core/srcs/logback-core-1.1.2-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/jars/scalatest_2.11-2.1.3.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.1.3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.8.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/srcs/akka-testkit_2.11-2.3.8-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
