Integrating akka-cluster WIP

--- a/rnkr-app/src/main/resources/application.conf
+++ b/rnkr-app/src/main/resources/application.conf
@@ -1,3 +1,9 @@
+akka {	
+	actor {
+		provider = "akka.cluster.ClusterActorRefProvider"		
+	}
+}
+
 main-app-dispatcher {
 	type = Dispatcher
 	executor = "thread-pool-executor"
