--- a/rnkr-cluster/src/main/resources/reference.conf
+++ b/rnkr-cluster/src/main/resources/reference.conf
@@ -1,6 +1,5 @@
 # Settings for the ClusterShardingExtension
 akka {
-
 	actor {
 		provider = "akka.cluster.ClusterActorRefProvider"		
 	}
@@ -11,6 +10,12 @@ akka {
 			hostname = "127.0.0.1"
 			port = 2551
 		}
+	}
+	
+	persistence {
+  		journal.plugin = akka.persistence.journal.leveldb
+  		leveldb.store.dir = "target/leveldb"
+  		// snapshot-store.plugin = akka.persistence.snapshot-store.leveldb
 	}
 
 	cluster {
