Added support for in-memory testing (default)

--- a/rnkr-cluster/src/main/resources/reference.conf
+++ b/rnkr-cluster/src/main/resources/reference.conf
@@ -13,12 +13,14 @@ akka {
 	}
 	
 	persistence {
-  		journal {
-  			plugin = "cassandra-journal"
-  		}
-  		snapshot-store {
-  			plugin = "cassandra-snapshot-store"
-  		}
+		journal {
+			// plugin = "cassandra-journal"
+			plugin = "akka.persistence.inmem.journal"
+		}
+		snapshot-store {
+			// plugin = "cassandra-snapshot-store"
+			plugin = "akka.persistence.inmem.snapshot-store"
+		}
 	}
 
 	cluster {
