--- a/rnkr-engine/src/main/resources/reference.conf
+++ b/rnkr-engine/src/main/resources/reference.conf
@@ -1,4 +1,10 @@
 net.itadinanta.rnkr {
+	
+	persistence {
+		type = "blackhole"
+		// type = "cassandra"
+	}
+	
 	cassandra {
 		hosts = [ "127.0.0.1" ]
 		port = 9042
