--- a/rnkr-cluster/.classpath
+++ b/rnkr-cluster/.classpath
@@ -37,11 +37,17 @@
   <classpathentry kind="var" path="IVY_HOME/cache/com.github.krasserm/akka-persistence-cassandra_2.11/jars/akka-persistence-cassandra_2.11-0.3.9.jar" sourcepath="IVY_HOME/cache/com.github.krasserm/akka-persistence-cassandra_2.11/srcs/akka-persistence-cassandra_2.11-0.3.9-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/bundles/cassandra-driver-core-2.1.5.jar" sourcepath="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/srcs/cassandra-driver-core-2.1.5-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.9.0.Final.jar" sourcepath="IVY_HOME/cache/io.netty/netty/srcs/netty-3.9.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.github.jdgoldie/akka-persistence-shared-inmemory_2.11/jars/akka-persistence-shared-inmemory_2.11-1.0.15.jar" sourcepath="IVY_HOME/cache/com.github.jdgoldie/akka-persistence-shared-inmemory_2.11/srcs/akka-persistence-shared-inmemory_2.11-1.0.15-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.6-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.6-javadoc.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-persistence-tck-experimental_2.11/jars/akka-persistence-tck-experimental_2.11-2.3.6-javadoc.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-persistence-tck-experimental_2.11/jars/akka-persistence-tck-experimental_2.11-2.3.6-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/junit/junit/jars/junit-4.11.jar" sourcepath="IVY_HOME/cache/junit/junit/srcs/junit-4.11-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar" sourcepath="IVY_HOME/cache/org.hamcrest/hamcrest-core/srcs/hamcrest-core-1.3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/jars/akka-multi-node-testkit_2.11-2.3.12.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/srcs/akka-multi-node-testkit_2.11-2.3.12-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-classic/srcs/logback-classic-1.1.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-core/srcs/logback-core-1.1.2-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/jars/akka-multi-node-testkit_2.11-2.3.12.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/srcs/akka-multi-node-testkit_2.11-2.3.12-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.12.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/srcs/akka-testkit_2.11-2.3.12-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
 </classpath>
