--- a/rnkr-frontend/.classpath
+++ b/rnkr-frontend/.classpath
@@ -39,6 +39,16 @@
   <classpathentry kind="var" path="IVY_HOME/cache/com.github.krasserm/akka-persistence-cassandra_2.11/jars/akka-persistence-cassandra_2.11-0.3.9.jar" sourcepath="IVY_HOME/cache/com.github.krasserm/akka-persistence-cassandra_2.11/srcs/akka-persistence-cassandra_2.11-0.3.9-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/bundles/cassandra-driver-core-2.1.5.jar" sourcepath="IVY_HOME/cache/com.datastax.cassandra/cassandra-driver-core/srcs/cassandra-driver-core-2.1.5-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.netty/netty/bundles/netty-3.9.0.Final.jar" sourcepath="IVY_HOME/cache/io.netty/netty/srcs/netty-3.9.0.Final-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.github.jdgoldie/akka-persistence-shared-inmemory_2.11/jars/akka-persistence-shared-inmemory_2.11-1.0.15.jar" sourcepath="IVY_HOME/cache/com.github.jdgoldie/akka-persistence-shared-inmemory_2.11/srcs/akka-persistence-shared-inmemory_2.11-1.0.15-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.6-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.6-javadoc.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-persistence-tck-experimental_2.11/jars/akka-persistence-tck-experimental_2.11-2.3.6-javadoc.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-persistence-tck-experimental_2.11/jars/akka-persistence-tck-experimental_2.11-2.3.6-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/junit/junit/jars/junit-4.11.jar" sourcepath="IVY_HOME/cache/junit/junit/srcs/junit-4.11-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar" sourcepath="IVY_HOME/cache/org.hamcrest/hamcrest-core/srcs/hamcrest-core-1.3-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/jars/akka-multi-node-testkit_2.11-2.3.6-sources.jar"/>
+  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-multi-node-testkit_2.11/jars/akka-multi-node-testkit_2.11-2.3.6-javadoc.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-can_2.11/bundles/spray-can_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-can_2.11/srcs/spray-can_2.11-1.3.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-io_2.11/bundles/spray-io_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-io_2.11/srcs/spray-io_2.11-1.3.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-util_2.11/bundles/spray-util_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-util_2.11/srcs/spray-util_2.11-1.3.2-sources.jar"/>
@@ -52,13 +62,9 @@
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-json_2.11/bundles/spray-json_2.11-1.3.1.jar" sourcepath="IVY_HOME/cache/io.spray/spray-json_2.11/srcs/spray-json_2.11-1.3.1-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-classic/srcs/logback-classic-1.1.2-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/ch.qos.logback/logback-core/jars/logback-core-1.1.2.jar" sourcepath="IVY_HOME/cache/ch.qos.logback/logback-core/srcs/logback-core-1.1.2-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.scalatest/scalatest_2.11/bundles/scalatest_2.11-2.2.5.jar" sourcepath="IVY_HOME/cache/org.scalatest/scalatest_2.11/srcs/scalatest_2.11-2.2.5-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/io.spray/spray-testkit_2.11/jars/spray-testkit_2.11-1.3.2.jar" sourcepath="IVY_HOME/cache/io.spray/spray-testkit_2.11/srcs/spray-testkit_2.11-1.3.2-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/jars/akka-testkit_2.11-2.3.6.jar" sourcepath="IVY_HOME/cache/com.typesafe.akka/akka-testkit_2.11/srcs/akka-testkit_2.11-2.3.6-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.specs2/specs2_2.11/jars/specs2_2.11-2.3.13.jar" sourcepath="IVY_HOME/cache/org.specs2/specs2_2.11/srcs/specs2_2.11-2.3.13-sources.jar"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/junit/junit/jars/junit-4.11.jar" sourcepath="IVY_HOME/cache/junit/junit/srcs/junit-4.11-sources.jar"/>
-  <classpathentry kind="var" path="IVY_HOME/cache/org.hamcrest/hamcrest-core/jars/hamcrest-core-1.3.jar" sourcepath="IVY_HOME/cache/org.hamcrest/hamcrest-core/srcs/hamcrest-core-1.3-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.pegdown/pegdown/jars/pegdown-1.2.1.jar" sourcepath="IVY_HOME/cache/org.pegdown/pegdown/srcs/pegdown-1.2.1-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.parboiled/parboiled-java/jars/parboiled-java-1.1.4.jar" sourcepath="IVY_HOME/cache/org.parboiled/parboiled-java/srcs/parboiled-java-1.1.4-sources.jar"/>
   <classpathentry kind="var" path="IVY_HOME/cache/org.ow2.asm/asm/jars/asm-4.1.jar" sourcepath="IVY_HOME/cache/org.ow2.asm/asm/srcs/asm-4.1-sources.jar"/>
