Added keyspace creation code for quick Cassandra startup

--- a/rnkr-engine/src/main/resources/reference.conf
+++ b/rnkr-engine/src/main/resources/reference.conf
@@ -1,14 +1,14 @@
 net.itadinanta.rnkr {
 	
 	persistence {
-		type = "blackhole"
-		// type = "cassandra"
+		// type = "blackhole"
+		type = "cassandra"
 	}
 	
 	cassandra {
 		hosts = [ "127.0.0.1" ]
 		port = 9042
-		default.keyspace = "akkacassandra"
+		default.keyspace = "rnkr"
 	}
 }
 
