Embedded cassandra enabled for testing

--- a/rnkr-cluster/src/main/resources/reference.conf
+++ b/rnkr-cluster/src/main/resources/reference.conf
@@ -11,17 +11,6 @@ akka {
 			port = 2551
 		}
 	}
-	
-	persistence {
-		journal {
-			// plugin = "cassandra-journal"
-			plugin = "akka.persistence.inmem.journal"
-		}
-		snapshot-store {
-			// plugin = "cassandra-snapshot-store"
-			plugin = "akka.persistence.inmem.snapshot-store"
-		}
-	}
 
 	cluster {
 		seed-nodes = [
@@ -44,7 +33,7 @@ akka {
 			rebalance-interval = 10 s
 			journal-plugin-id = ""
 			snapshot-plugin-id = ""
-			state-store-mode = "persistence"
+			state-store-mode = "ddata"
 			snapshot-after = 1000
 			least-shard-allocation-strategy {
 		    	rebalance-threshold = 10
