--- a/rnkr-engine/src/main/resources/reference.conf
+++ b/rnkr-engine/src/main/resources/reference.conf
@@ -6,6 +6,8 @@ net.itadinanta.rnkr {
 	}
 	
 	cassandra {
+		embedded = true
+		config = "conf/cassandra.yaml"
 		hosts = [ "127.0.0.1" ]
 		port = 9042
 		default.keyspace = "rnkr"
