Added partitions parsing

--- a/rnkr-engine/src/main/resources/reference.conf
+++ b/rnkr-engine/src/main/resources/reference.conf
@@ -1,10 +1,10 @@
 net.itadinanta.rnkr {
-	
+
 	persistence {
 		// type = "blackhole"
 		type = "cassandra"
 	}
-	
+
 	cassandra {
 		embedded = true
 		config = "conf/cassandra.yaml"
@@ -12,6 +12,8 @@ net.itadinanta.rnkr {
 		port = 9042
 		default.keyspace = "rnkr"
 	}
+
+	partitions: []
 }
 
 akka {
