Default partition is no longer a special case

--- a/rnkr-engine/src/main/resources/reference.conf
+++ b/rnkr-engine/src/main/resources/reference.conf
@@ -1,19 +1,28 @@
 net.itadinanta.rnkr {
 
-	persistence {
-		// type = "blackhole"
-		type = "cassandra"
-	}
-
 	cassandra {
 		embedded = true
 		config = "conf/cassandra.yaml"
-		hosts = [ "127.0.0.1" ]
-		port = 9042
-		default.keyspace = "rnkr"
 	}
 
-	partitions: []
+	partitions {
+		"default" {
+			persistence {
+				// type = "blackhole"
+				type = "cassandra"
+			}
+
+			cassandra {
+				hosts = [ "127.0.0.1" ]
+				port = 9042
+				keyspace = "rnkr"
+			}
+			
+			auth {
+				"user": "pass"
+			}
+		}
+	}
 }
 
 akka {
